dashboard/app: open AI information
Currently we show AI information only at AccessUser level.
Show AI info according to bug access levels instead,
but allow any actions (job creation/assessment) only at AccessUser level.

--- a/dashboard/app/templates/bug.html
+++ b/dashboard/app/templates/bug.html
@@ -61,7 +61,7 @@ Page with details about a single bug.
 		</form>
 	{{end}}
 	{{if .AIJobs}}
-		<div class="collapsible collapsible-show">
+		<div class="collapsible collapsible-{{if .Header.AIActions}}show{{else}}hide{{end}}">
 			<div class="head">
 				<span class="show-icon">&#9654;</span>
 				<span class="hide-icon">&#9660;</span>
