--- a/dashboard/app/templates/ai_job.html
+++ b/dashboard/app/templates/ai_job.html
@@ -153,20 +153,22 @@ Detailed info on a single AI job execution.
 	{{template "header" .Header}}
 	{{template "ai_job_list" .Jobs}}
 
-	{{if and (ne .Job.Correct "⏳") (ne .Job.Correct "💥")}}
-		<form method="POST">
-			<fieldset>
-				<legend>Result correct:</legend>
-				<input type="radio" name="correct" id="✅" value="✅" {{if eq .Job.Correct "✅" }}checked{{end}} title="Correct">
-				<label for="✅" title="Correct">✅</label>
-				<input type="radio" name="correct" id="❌" value="❌" {{if eq .Job.Correct "❌" }}checked{{end}} title="Incorrect">
-				<label for="❌" title="Incorrect">❌</label>
-				<input type="radio" name="correct" id="❓" value="❓" {{if eq .Job.Correct "❓" }}checked{{end}} title="Not yet reviewed">
-				<label for="❓" title="Not yet reviewed">❓</label>
-				<button type="submit">Set</button>
-			</fieldset>
-		</form>
-		<br>
+	{{if .Header.AIActions}}
+		{{if and (ne .Job.Correct "⏳") (ne .Job.Correct "💥")}}
+			<form method="POST">
+				<fieldset>
+					<legend>Result correct:</legend>
+					<input type="radio" name="correct" id="✅" value="✅" {{if eq .Job.Correct "✅" }}checked{{end}} title="Correct">
+					<label for="✅" title="Correct">✅</label>
+					<input type="radio" name="correct" id="❌" value="❌" {{if eq .Job.Correct "❌" }}checked{{end}} title="Incorrect">
+					<label for="❌" title="Incorrect">❌</label>
+					<input type="radio" name="correct" id="❓" value="❓" {{if eq .Job.Correct "❓" }}checked{{end}} title="Not yet reviewed">
+					<label for="❓" title="Not yet reviewed">❓</label>
+					<button type="submit">Set</button>
+				</fieldset>
+			</form>
+			<br>
+		{{end}}
 	{{end}}
 
 	{{if .History}}
