dashboard/app: allow to see only AI jobs that need moderation

--- a/dashboard/app/templates/ai_jobs.html
+++ b/dashboard/app/templates/ai_jobs.html
@@ -13,15 +13,13 @@ List of AI jobs page.
 </head>
 <body>
 	{{template "header" .Header}}
-	<form action="/{{.Header.Namespace}}/ai" method="GET">
+	<form method="GET">
 		<label for="workflow">Workflow:</label>
-		<select name="workflow">
-			<option value="">All</option>
+		<select name="workflow" onchange="this.form.submit()">
 			{{range $w := .Workflows}}
-			<option value="{{$w}}" {{if eq $w $.CurrentWorkflow}}selected{{end}}>{{$w}}</option>
+				<option value="{{$w}}" {{if eq $w $.CurrentWorkflow}}selected{{end}}>{{$w}}</option>
 			{{end}}
 		</select>
-		<input type="submit" value="Filter">
 	</form>
 	{{template "ai_job_list" .Jobs}}
 </body>
