dashboard/app: fix namespace coverage retrieval
Use current namespace instead of the hardcoded one.

--- a/pkg/cover/templates/heatmap.html
+++ b/pkg/cover/templates/heatmap.html
@@ -215,7 +215,7 @@
             {{ if $child.IsDir }}
               {{ $cov }}%
             {{ else }}
-              <a href="javascript:onShowFileContent('/upstream{{ index $child.FileCoverageLink $i }}');">{{ $cov }}%</a>
+              <a href="javascript:onShowFileContent('{{ index $child.FileCoverageLink $i }}');">{{ $cov }}%</a>
             {{ end }}
             <pre class="tooltiptext">{{ index $child.Tooltips $i }}</pre>
           </div>
